--- a/modules/endorsement_insurance_invoice/locale/fr_FR.po
+++ b/modules/endorsement_insurance_invoice/locale/fr_FR.po
@@ -312,6 +312,10 @@ msgctxt ""
 msgid "Previous"
 msgstr "Précédent"
 
+msgctxt "wizard_button:endorsement.start,change_billing_information,end:"
+msgid "Cancel"
+msgstr "Annuler"
+
 msgctxt "wizard_button:endorsement.start,change_billing_information,suspend:"
 msgid "Suspend"
 msgstr "Suspendre"
