--- a/modules/account_invoice_cog_translation/locale/fr_FR.po
+++ b/modules/account_invoice_cog_translation/locale/fr_FR.po
@@ -1,4 +1,4 @@
-# 
+#
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
@@ -118,3 +118,7 @@ msgstr "Quittances"
 msgctxt "view:account.invoice:account_invoice."
 msgid "_Post"
 msgstr "Emettre"
+
+msgctxt "field:account.invoice,reconciled:account_invoice."
+msgid "Reconciled"
+msgstr "Lettrée"
