--- a/modules/account_invoice_cog_translation/locale/fr_FR.po
+++ b/modules/account_invoice_cog_translation/locale/fr_FR.po
@@ -122,3 +122,77 @@ msgstr "Emettre"
 msgctxt "field:account.invoice,reconciled:account_invoice."
 msgid "Reconciled"
 msgstr "Lettrée"
+
+msgctxt "error:account.invoice.credit:account_invoice."
+msgid "You can not credit with refund invoice \"%s\" because it is not posted."
+msgstr ""
+"Vous ne pouvez faire une note de crédit pour la facture « %s » car elle "
+"n'est pas lettrée."
+
+msgctxt "error:account.invoice.tax:account_invoice."
+msgid ""
+"You can not add line \"%(line)s\" to invoice \"%(invoice)s\" because it is "
+"posted, paid or canceled."
+msgstr ""
+"Vous ne pouvez ajouter la ligne « %(line)s » à la facture « %(invoice)s » "
+"car elle est posté, payée ou annulée."
+
+msgctxt "selection:account.invoice,state:account_invoice."
+msgid "Posted"
+msgstr "Emise"
+
+msgctxt "view:account.invoice:account_invoice."
+msgid "_Post"
+msgstr "Emettre"
+
+msgctxt "error:account.invoice.line:account_invoice."
+msgid ""
+"You can not modify line \"%(line)s\" from invoice \"%(invoice)s\" that is "
+"posted or paid."
+msgstr ""
+"Vous ne pouvez modifier la ligne « %(line)s » de la facture « %(invoice)s » "
+"car elle est payée ou postée."
+
+msgctxt "error:account.invoice:account_invoice."
+msgid "You can not modify invoice \"%s\" because it is posted, paid or cancelled."
+msgstr ""
+"Vous ne pouvez modifier la facture « %s » car elle est postée, payée ou "
+"annulée."
+
+msgctxt "error:account.period:account_invoice."
+msgid ""
+"You can not change the invoice sequence in period \"%s\" because there is "
+"already an invoice posted in this period"
+msgstr ""
+"Vous ne pouvez changer la séquence de facture dans la période « %s » car il "
+"y a déjà une facture postée pour cette période."
+
+msgctxt "error:account.invoice.tax:account_invoice."
+msgid ""
+"You can not modify tax \"%(tax)s\" from invoice \"%(invoice)s\" because it "
+"is posted or paid."
+msgstr ""
+"Vous ne pouvez modifier la taxe « %(tax)s » de la facture « %(invoice)s » "
+"car elle est payée ou postée."
+
+msgctxt "error:account.invoice:account_invoice."
+msgid "Customer invoice/credit note \"%s\" can not be cancelled once posted."
+msgstr ""
+"La facture/note de crédit client « %s » ne peut pas être annullée une fois "
+"postée."
+
+msgctxt "error:account.invoice.line:account_invoice."
+msgid ""
+"You can not add a line to invoice \"%(invoice)s\" that is posted, paid or "
+"cancelled."
+msgstr ""
+"Vous ne pouvez ajouter une ligne à la facture « %(invoice)s » car elle est "
+"postée, payée ou annulée."
+
+msgctxt "error:account.fiscalyear:account_invoice."
+msgid ""
+"You can not change invoice sequence in fiscal year \"%s\" because there are "
+"already posted invoices in this fiscal year."
+msgstr ""
+"Vous ne pouvez changer la séquence de facture de l'année fiscale « %s » car "
+"elle contient déjà des factures postées."
