cog_utils: BatchRoot refactoring
review http://rietveld.coopengo.com/1380001/

--- a/modules/cog_utils/CHANGELOG
+++ b/modules/cog_utils/CHANGELOG
@@ -1,2 +1,5 @@
+* Externalize batches settings into a custom .conf file referenced by
+trytond.conf 'config_file' entry in a '[batch]' section.
+
 Version 1.2 - 2014-07-01
 * Changelog file creation
